welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:5: error: not found: value peindre
  	peindre();
        ^PatternPicture:13: error: not found: value peindre
    	peindre();
        ^